--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^5.0.3",
     "react-responsive": "^1.2.7",
     "react-router": "^2.0.0",
+    "semantic-ui-react": "^0.71.3",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.x.x",
